force-app/main/default/objects/Visit_Report__c/Visit_Report__c.object-meta.xml
<CustomObject>
    <description>The reports which will be added additionally by product specialist</description>
    <label>Visit Report</label>
    <nameField>
        <displayFormat>VISIT_REP-{0000}</displayFormat>
        <label>Visit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>