force-app/main/default/objects/Visit_Report__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>