force-app/main/default/objects/Visit_Report__c/fields/Business_Talk_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Business_Talk_Opportunity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Talk &amp; Opportunity</label>
    <type>TextArea</type>
</CustomField>