force-app/main/default/objects/Visit_Report__c/fields/Main_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Main_Purpose__c</fullName>
    <formula>TEXT(Visit_Plan_Report__r.Main_purpose__c )</formula>
    <label>Main Purpose</label>
    <type>Text</type>
</CustomField>