force-app/main/default/objects/Visit_Report__c/fields/Visit_Plan_Report__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Plan / Report</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipLabel>Visit Reports</relationshipLabel>
    <relationshipName>Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>